Add category and expense form features
Introduces CategoryService with query, mutation, and config files. Adds new form input components for categories, date picker, expense items, other details, status, and photo upload. Updates ExpenseService and UploadService APIs for manual expense creation and file uploads. Adds new hooks and schemas for category and expense forms. Refactors UI components and updates dependencies for react-day-picker and react-dropzone.

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "singleQuote": true,
   "trailingComma": "all",
   "arrowParens": "always",
-  "semi": false,
+  "semi": true,
   "tabWidth": 2,
-  "printWidth": 120
+  "printWidth": 100
 }
