--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.543.0",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-medium-image-zoom": "^5.3.0",
     "react-router-dom": "^7.8.2",
