--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-medium-image-zoom": "^5.3.0",
     "react-router-dom": "^7.8.2",
     "recharts": "2.15.4",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
